syntax = "proto3";

package attendance.service;

option go_package = "proto/attendance";

import "google/protobuf/timestamp.proto";


service Attendance {
	rpc Register(Employee) returns (RegisterEmployeeResponse) {}
}

message Employee {
	string full_name = 1;
	int32 group_id = 2;
	string start_time = 3;
	string end_time = 4;
}

message EmployeeWorkSchedule {
	string employee_id = 1;
	int32 day = 2;
	string start_time = 3;
	string end_time = 4;
	bool day_off = 5;
}

message RegisterEmployeeResponse {
	string msg = 1;
	int32 employee_id = 2;
	google.protobuf.Timestamp created_at = 3;
	int32 error_code = 4;
}
